--- a/src/sequelize/config/config.json
+++ b/src/sequelize/config/config.json
@@ -1,10 +1,10 @@
 {
   "development": {
     "db": "create",
-    "username": "root",
-    "password": null,
-    "database": "exam_app",
-    "host": "127.0.0.1",
+    "username": "admin",
+    "password": "bB2xKYON",
+    "database": "sys",
+    "host": "172.106.0.61",
     "dialect": "mysql",
     "timezone": "+07:00"
   },
