--- a/src/sequelize/config/config.json
+++ b/src/sequelize/config/config.json
@@ -6,7 +6,8 @@
     "database": "sys",
     "host": "172.106.0.61",
     "dialect": "mysql",
-    "timezone": "+07:00"
+    "timezone": "+07:00",
+    "port": "17070"
   },
   "test": {
     "username": "root",
