--- a/.sequelizerc
+++ b/.sequelizerc
@@ -6,7 +6,7 @@ const path = require("path");
 const DB_PATH = "dist/db"; // use dist instead of src directory
 
 module.exports = {
-  config: path.resolve(DB_PATH, "config.json"),
+  config: path.resolve(DB_PATH, "config.js"),
   "models-path": path.resolve(DB_PATH, "models"),
   "seeders-path": path.resolve(DB_PATH, "seeders"),
   "migrations-path": path.resolve(DB_PATH, "migrations"),
